Bug 106211 - notebookbar icon png rendering error
Summary: notebookbar icon png rendering error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-27 09:05 UTC by andreas_k
Modified: 2017-03-09 15:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
see black background instead of transparent. (2.04 KB, image/png)
2017-02-27 09:05 UTC, andreas_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2017-02-27 09:05:40 UTC
Created attachment 131499 [details]
see black background instead of transparent.

hi the rendering of the transparent background of res/notebookbar.png didn't work. the transparant background was render to black color.

I "fixed" it with add an remi transarent colored background but it's a dirty dirty hack.
Comment 1 Xisco Faulí 2017-03-08 11:41:57 UTC Comment hidden (obsolete)
Comment 2 andreas_k 2017-03-08 12:35:36 UTC
Open Writer
1. Tools -> Options -> Advanced -> Enable experimental features (may be unstable)
2. View -> Toolbar Layout -> Notebookbar
3. View -> Notebookbar -> Tabbed

Notebookbar Icon (top left icon for the drop down menu in the nottebookbar) had a gray background to fit kde stlye but not 100% windows style

https://dl.dropboxusercontent.com/u/1642456/LibreOffice/WriterMenubarNew.png

With the old Icon it look like this
https://dl.dropboxusercontent.com/u/1642456/LibreOffice/WriterMenubarOld.png


If you remove the background it look like the old icon so it look like the png rendering didn't work well.

origin png file is here.
https://github.com/LibreOffice/core/blob/master/icon-themes/galaxy/res/notebookbar.png
Comment 3 Commit Notification 2017-03-08 18:49:28 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b3dc0386bd0749ad93f5cd649176e028fe4e8360

tdf#106211 Add notebookbar icon transparency

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.