tdf#106211 Add notebookbar icon transparency

+ modified icon (set transparent color to black)
+ added transparency support for loaded icon

Change-Id: I2dd8581e7d667096f08eb8c4c038e96a7f007dd3